Clean up LSP.